<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReservasCanceladas">

    <ImageView
        android:id="@+id/imagenParque"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:scaleType="centerCrop"
        android:src="@drawable/parquediversiones" />

    <View
        android:id="@+id/fondoRojo"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/lightRed" />

    <ImageButton
        android:id="@+id/iconoMapa"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        app:srcCompat="@android:drawable/ic_dialog_map"
        app:tint="@color/black"
        android:contentDescription="@string/mapa"/>

    <ImageButton
        android:id="@+id/iconoQR"
        android:layout_width="83dp"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/iconoMapa"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/qrcode"
        android:contentDescription="@string/codigo_qr"/>

    <ImageButton
        android:id="@+id/iconoHome"
        android:layout_width="83dp"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/iconoQR"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/home"
        android:contentDescription="@string/home"
        />

    <ImageButton
        android:id="@+id/iconoTicket"
        android:layout_width="83dp"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/iconoHome"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ticket"
        android:contentDescription="@string/tickets"/>

    <ImageButton
        android:id="@+id/iconoReserva"
        android:layout_width="83dp"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/iconoTicket"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/reservas"
        android:contentDescription="@string/reservas"
        app:tint="@color/red"/>

    <RelativeLayout
        android:id="@+id/franjaSuperior"
        android:layout_width="match_parent"
        android:layout_height="79dp">

        <TextView
            android:id="@+id/nombreApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/wait_less"
            android:textColor="@color/red"
            android:textSize="35sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/iconoPerfil"
            android:layout_width="72dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/nombreApp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/perfil"
            android:contentDescription="@string/perfil"/>

        <ImageButton
            android:id="@+id/tema"
            android:layout_width="72dp"
            android:layout_height="48dp"
            android:layout_centerInParent="true"
            android:layout_toStartOf="@id/nombreApp"
            android:layout_alignParentStart="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/tono"
            android:contentDescription="@string/tema"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="603dp"
        android:layout_below="@+id/franjaSuperior"
        android:padding="30dp">

        <TextView
            android:id="@+id/escanear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:text="@string/reservas"
            android:textColor="@color/red"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/sinReservas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/escanear"
            android:text="@string/menCan"
            android:textSize="25dp"/>

        <TextView
            android:id="@+id/blanco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/sinReservas"
            android:text=""/>

        <TextView
            android:id="@+id/sinReservas2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/blanco"
            android:text="@string/menCan2"
            android:textSize="25dp"/>

        <TextView
            android:id="@+id/blanco2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/sinReservas2"
            android:text=""/>

        <Button
            android:id="@+id/hacerReserva"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/blanco2"
            android:layout_centerHorizontal="true"
            android:text="@string/reaRe"
            android:backgroundTint="@color/red" />

    </RelativeLayout>

</RelativeLayout>